added eqm, wrote

--- a/report/report.bib
+++ b/report/report.bib
@@ -211,7 +211,7 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
 @article{ dome,
 Author = {Broun, D. M.},
 Title = {{What lies beneath the dome?}},
-Journal = {{NATURE PHYSICS}},
+Journal = {{Nature Physics}},
 Year = {{2008}},
 Volume = {{4}},
 Number = {{3}},
@@ -286,4 +286,10 @@ Unique-ID = {{ISI:000254559900008}},
   url={http://books.google.se/books?id=FSObYfuWceMC},
   year={2012},
   publisher={Amer Mathematical Society}
+}
+@Manual{sympy,
+title = {SymPy: Python library for symbolic mathematics},
+author = {{SymPy Development Team}},
+year = {2013},
+url = {http://www.sympy.org},
 }
