--- a/report/report.tex
+++ b/report/report.tex
@@ -71,7 +71,7 @@ A conformal field theory is a quantum field theory with invariance under conform
 
 There is no proof of the correspondence but it has been extensively tested. The field theory of the original conjecture \cite{Maldacena:1997re} was a supersymmetric Yang-Mills theory. Extensions of the conjecture have later been made and we will here use a field theory without supersymmetry. That the extended correspondence also holds is motivated in for example \cite{McGreevy:2009xe}.\\
 
-The strength of the duality comes from that the bulk theory is weakly coupled when the boundary theory is strongly coupled and vice versa. This lets us solve otherwise computationally untractable problems on the strongly coupled side by solving them on the weakly coupled side.\\
+The strength of the duality comes from that the bulk theory is weakly coupled when the boundary theory is strongly coupled and vice versa. This lets us solve otherwise computationally intractable problems on the strongly coupled side by solving them on the weakly coupled side.\\
 
 %\begin{figure}
 %\centering
@@ -784,7 +784,7 @@ This disagrees with the linear temperature dependence of the scattering rate exp
 \chapter{Summary}
 We have shown how the AdS/CFT correspondence can be used to model a high-$T_c$ superconductor, both below and above $T_c$.
 \section{Outlook}
-A much more thorough comparison with experimental results could be made. Formula \eqref{muTdep} could for example be investigated. The conductivity can also be investigate much more thoroughly. This has though already been done, e.g.~\cite{hartnoll8}, but it would be interesting to repeat their calculations.
+A much more thorough comparison with experimental results could be made. Formula \eqref{muTdep} could for example be investigated. The conductivity can also be investigate much more thoroughly. This has however already been done, e.g.~\cite{hartnoll8}, but it would be interesting to repeat their calculations. A thorough treatment of the differential equations would also be interesting. All curves in Figure \ref{f:O} approach the same value, this is because .. . The differential equation has been numerically investigated and it seems to have the same boundary behaviour regardless of initial conditions so it seems possible to find a mathematical explanation for the behaviour. It might be possible to see the $delta$-function in the conductivity as a spontanous symmetry breaking just like for the operator $\mathcal{O}$, an expectation value appearing without a source. The infinite conductivity should appear when $\omega=0$ and $\psi>0$. This is precisely when the terms without derivatives in the differential equation \eqref{eqm3} becomes negative near the boundary.
 \begin{appendices}
 \chapter{Conventions in this Report\label{conventions}}
 The AdS space will be refered to as the bulk and the boundary conformal field theory will be referred to as the boundary theory or the superconductor or just CFT. We use $z$ for the ``radial'' coordinate in AdS space, it is 0 at the conformal boundary and $z_h$ at the horizon. This is the same coordinate as the one called $r$ in \cite{hartnoll8}, there with horizon at $r=r_+$.\\
